# cosmoHDF5

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bench.sh  bm_pp  bm_ss  hdf5diff.sh  run_bench.sh  run_bench_pp.sh  run_bench_ss.sh  run_finalexe.sh  slurm_dispatch.sh  slurm_dispatch_check_correctness.sh  slurm_dispatch_run_bench.sh  slurm_dispatch_run_bench_pp.sh  slurm_dispatch_run_bench_ss.sh
bm_logs_pp/: bench_14085746.err  bench_14085746.out  bench_14085747.err  bench_14085748.err  bench_14085748.out  bench_14085749.err  bench_14085749.out  bench_14085750.err  bench_14085751.err  bench_14085751.out  bench_14085873.err  bench_14085874.err  bench_14085874.out  bench_14085875.err  bench_14085876.err  bench_14085877.err  bench_14085877.out  bench_14085878.err
bm_logs_ss/: bench_14085742.out  bench_14085743.out  bench_14085744.out  bench_14085850.err  bench_14085850.out  bench_14085852.err  bench_14085863.out  bench_14085864.err  bench_14085865.err  bench_14085865.out  bench_14085866.err  bench_14085866.out  bench_14085867.err  bench_14085867.out  bench_14085869.err  bench_14085869.out  bench_14085871.out  bench_14085872.err  bench_14088437.out  bench_14088438.out  bench_14088439.out  bench_14088440.out  bench_14088441.err  bench_14088442.out  bench_14090686.err  bench_14090686.out  bench_14090687.out
cmake/: HDF5.cmake  argparse.cmake  hdf5_target.cmake  mpicpp.cmake
header/: TNG_data.hpp  attribute_helper.hpp  general_utils.hpp  hdf5_utils.hpp  mpi_helpers.hpp  snap_config_handler.hpp  snap_header_handler.hpp  snap_io.hpp  snap_param_handler.hpp  snap_partdata_handler.hpp
proj/: CMakeLists.txt
proj/01_SRSW/: CMakeLists.txt  main.cpp
proj/02_PRPW/: main.cpp
proj/02_SRPW/: main.cpp
proj/03_mixgeneral/: CMakeLists.txt  main.hpp
proj/PRPW/: CMakeLists.txt  main.cpp
proj/SRPW/: CMakeLists.txt  main.cpp
proj/SRSW/: main.cpp
proj/benchmark/: CMakeLists.txt  main.cpp  main.hpp
proj/final_proj_code/: CMakeLists.txt  main.cpp
proj/final_proj_code_extension/: CMakeLists.txt  main.cpp
proj/newcode_data_check/: CMakeLists.txt  main.cpp
proj/read_addonextra/: CMakeLists.txt  local_main.hpp  main.cpp
proj/step01/: CMakeLists.txt  main.cpp
proj/step02/: CMakeLists.txt  main.cpp  main.h  main.hpp
proj/step02_serial/: CMakeLists.txt  main.cpp  main_local.hpp
proj/testdatadiff/: CMakeLists.txt  main.cpp  main.hpp
proj/testprog/: CMakeLists.txt  main.cpp
results_pp/: bm_pread_pwrite_TNG100n1820.csv  bm_pread_pwrite_TNG100n1820Dark.csv  bm_pread_pwrite_TNG100n455.csv  bm_pread_pwrite_TNG100n455Dark.csv  bm_pread_pwrite_TNG100n910.csv  bm_pread_pwrite_TNG100n910Dark.csv
results_ss/: bm_sread_swrite_TNG100n1820Dark_packed.csv  bm_sread_swrite_TNG100n1820_packed.csv  bm_sread_swrite_TNG100n455Dark_packed.csv  bm_sread_swrite_TNG100n455_packed.csv  bm_sread_swrite_TNG100n910Dark_packed.csv  bm_sread_swrite_TNG100n910_packed.csv
results_ss_old/: bm_sread_swrite_TNG100n1820Dark_packed.csv  bm_sread_swrite_TNG100n1820_packed.csv  bm_sread_swrite_TNG100n455Dark_packed.csv  bm_sread_swrite_TNG100n455Dark_spread.csv  bm_sread_swrite_TNG100n455_packed.csv  bm_sread_swrite_TNG100n910Dark_packed.csv  bm_sread_swrite_TNG100n910Dark_spread.csv  bm_sread_swrite_TNG100n910_packed.csv
